[tool.poetry]
name = "flum-api"
version = "0.1.0"
description = ""
authors = ["Soonho Kwon <percy3368@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
